<!--?xml version="1.0" encoding="utf-8"?-->
<preferencescreen xmlns:android="http://schemas.android.com/apk/res/android">




    <preferencecategory android:title="@string/pref_user_profile">
        <edittextpreference android:title="@string/pref_user_name"
            android:summary="@string/pref_user_name_summary"
            android:key="prefUsername">
        </edittextpreference></preferencecategory>

    <preferencecategory android:title="@string/pref_update_setting">
        <checkboxpreference  android:key="prefSendReport"
            android:summary="@string/pref_send_report_summary"
            android:title="@string/pref_send_report">
        </checkboxpreference>

        <listpreference android:key="prefSyncFrequency"
            android:entries="@array/syncFrequency"
            android:summary="@string/pref_sync_frequency_summary"
            android:title="@string/pref_sync_frequency">
        </listpreference></preferencecategory>

</preferencescreen>